# protomuck

./: .gitignore  CMakeLists.txt
cmake/: autoconf.h.in  config.h.in  configh.cmake
src/: CMakeLists.txt  Makefile.in  interface.c  interface_module.c  msdp.c  mth.c  other_interface_functions.c  p_connects.c  p_system.c  telopt.c  utils.c
src/inc/: interface.h  mth.h  p_system.h  strings.h
