cmake_minimum_required(VERSION 3.0.0)
project(protoMuck VERSION 0.1.0)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

option(BUILD_SSL_SUPPORT "Build with ssl support" ON)
option(BUILD_IPV6_SUPPORT "Build with ipv6 support" ON)
if(UNIX)
    set(MAKE_CMD "./configure")
    list(APPEND MAKE_CMD --with-ssl --enable-ipv6)
    execute_process(COMMAND ${MAKE_CMD} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
endif()
add_subdirectory(src)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
