set( SRCS
        array.c
        boolexp.c
        compile.c
        compress.c
        copyright.c
        create.c
        cgi.c
        crt_malloc.c
        db.c
        debugger.c
        disassem.c
        diskprop.c
        edit.c
        events.c
        game.c
        hashtab.c
        help.c
        inst.c
        interp.c
        log.c
        look.c
        match.c
        mcp.c
        netresolve.c
        mcpgui.c
        mcppkgs.c
        mfuns.c
        mfuns2.c
        mfuns3.c
        move.c
        msdp.c
        msgparse.c
        mth.c
        mufevent.c
        newhttp.c
        p_array.c
        p_connects.c
        p_db.c
        p_error.c
        p_file.c
        p_float.c
        p_html.c
        p_http.c
        p_math.c
        p_mcp.c
        p_misc.c
        p_muf.c
        p_mysql.c
        p_props.c
        p_regex.c
        p_socket.c
        p_stack.c
        p_strings.c
        p_system.c
        player.c
        predicates.c
        propdirs.c
        property.c
        props.c
        random.c
        rob.c
        reg.c
        sanity.c
        set.c
        sha1.c
        signal.c
        smatch.c
        speech.c
        strftime.c
        stringutil.c
        telopt.c
        timequeue.c
        timestamp.c
        tune.c
        unparse.c
        utils.c
        version.c
        wiz.c
        interface.c
        )
include_directories(inc)
find_package(OpenSSL REQUIRED)
find_package(MySQL REQUIRED)
find_package(ZLIB REQUIRED)
link_libraries(${ZLIB_LIBRARY} ${OPENSSL_LIBRARIES} ${MYSQL_LIBRARIES} wsock32.lib)
add_executable(protoMuck ${SRCS})